--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,5 @@
-Flask
-Flask-PyMongo
-Flask-Cors
-shortuuid
-werkzeug
-gunicorn
+Flask==2.3.4
+Flask-PyMongo==2.3.0
+Flask-Cors==3.1.1
+shortuuid==1.0.11
+gunicorn==20.1.0
