--- a/.dockerignore
+++ b/.dockerignore
@@ -1,21 +1,5 @@
-# Python
+fly.toml
+.git/
 __pycache__/
-*.pyc
-.env
-venv/
-
-# Node / React
-node_modules/
-/frontend/node_modules
-/frontend/build
-.DS_Store
-
-# Editor / OS
-.vscode/
-.idea/
-
-# File log atau build yang tidak perlu
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.envrc
+.venv/
